# DataEngineeringUnboxed

./: .gitignore  readme.md
Glue_local_setup/: etl.py  how_to_run_glue_with_vsCode.md
MLKickstart_repo/: LICENSE  Makefile  README.md  pyproject.toml
MLKickstart_repo/MLKickstart_module/: __init__.py  dataset.py  features.py  plots.py
MLKickstart_repo/MLKickstart_module/modeling/: predict.py  train.py
MLKickstart_repo/docs/: mkdocs.yml
MLKickstart_repo/docs/docs/: index.md
aws/ecs_global infrastructure/: ecs_infra.yaml  ecs_service.yaml
aws/glue_local_Jupyter/: how_to_run_glue_in_jupyter.md  local_jupter.ipynb
aws/glue_local_VSCode/: how_to_run_glue_with_vsCode.md
aws_glue_local_jupyter/: how_to_run_glue_in_jupyter.md  local_jupter.ipynb
llm_structured_outputs/: instructor_pydantic.py  requirements.txt
local_glue_jupyter/: how_to_run_glue_in_jupyter.md  local_jupter.ipynb
parquet/: parquet_encoding_secrets.ipynb
