[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MLKickstart_module"
version = "0.0.1"
description = "a structured template that showcases the best practices for kickstarting machine learning projects using Cookiecutter Data Science. This project serves as a guide to setting up a reproducible, scalable, and organized ML workflow, ensuring efficiency from data exploration to model deployment."
authors = [
  { name = "DataUnboxed" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["MLKickstart_module"]
force_sort_within_sections = true
